# Scent

./: .gitignore  LICENSE  README.md  benchmark_wordlist.txt  main.py  mcp_server.py  pyproject.toml  requirements.txt  run_test.py  scent.py  testserver.py
core/: __init__.py  config.py  engine.py  scanner.py
dict/: build.py  full.txt  full_admin.txt  full_api.txt  full_backups.txt  full_cms.txt  full_config.txt  full_logs.txt  quick.txt  quick_admin.txt  quick_api.txt  quick_backups.txt  quick_cms.txt  quick_config.txt  quick_logs.txt  standard.txt  standard_admin.txt  standard_api.txt  standard_backups.txt  standard_cms.txt  standard_config.txt  standard_logs.txt
utils/: __init__.py  checkpoint.py  crawl.py  dict_loader.py  diff.py  ext_probe.py  filters.py  output.py  pattern_learn.py  rate_limit.py  wildcard.py
