[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "scent"
version = "2.9.0"
description = "feedback-driven web fuzzer"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "scent"}]
dependencies = [
    "aiohttp>=3.8",
    "colorama>=0.4",
    "tqdm>=4.64",
]
